feat: biblioteca de música e livros + painel administrativo
Sistema de papéis (USER/ADMIN) e um acervo próprio: o admin sobe MP3 e PDF,
os metadados são lidos de dentro do arquivo e viram catálogo navegável,
tocável e baixável.

Papéis
- Role enum + authority no Spring Security; /api/admin/** exige ADMIN pela
  regra de URL E por @PreAuthorize (se o mapeamento mudar, segue fechado).
- Suspensão de conta corta o acesso na hora: o filtro JWT recusa token de
  conta suspensa, em vez de só barrar no próximo login.
- Primeiro admin vem de app.admin-emails (ADMIN_EMAILS) no boot — sem isso
  não existiria nenhum, já que o cadastro sempre cria usuário comum.

Biblioteca
- Upload em lote; SHA-256 barra o mesmo arquivo duas vezes. Um arquivo ruim
  não invalida os outros do lote.
- mp3agic lê tags ID3 (título, artista, álbum, ano, faixa, duração, capa
  embutida); PDFBox lê os metadados do PDF e renderiza a 1ª página como capa.
  Arquivo sem tag entra com o nome do arquivo — recusar por metadado seria
  pior que aceitar com o campo vazio.
- Streaming com Range (206): é o que faz arrastar a barra do player e abrir
  a página 300 de um PDF sem baixar o livro inteiro.
- Playlists com visibilidade, código de compartilhamento, colaboradores e
  reordenação; download em ZIP montado em streaming (playlist com .m3u na
  ordem, ou o acervo inteiro em pastas por artista/álbum).

Painel
- /api/admin: números do sistema, séries de 30 dias, rankings, gestão de
  contas, edição/remoção de conteúdo e export.

Dois defeitos que os testes novos pegaram:
- "year" é palavra reservada em SQL e derrubava o CREATE TABLE das duas
  tabelas novas; a coluna virou release_year (campo e JSON seguem "year").
- Range malformado respondia 416, o que impediria um cliente de header
  esquisito de tocar qualquer coisa. Agora é ignorado (200, RFC 9110 §14.2);
  416 fica só para intervalo bem-formado que o arquivo não satisfaz.

Duas consultas usavam date(), que é do MySQL: agrupam por dia em Java agora.

Co-