@@ -2,7 +2,8 @@ package com.movies.backend.security;
 
 import com.movies.backend.user.entity.User;
 import com.movies.backend.user.repository.UserRepository;
-import java.util.Collections;
+import java.util.List;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -26,11 +27,14 @@ public class AppUserDetailsService implements UserDetailsService {
         User user = userRepository.findByEmailIgnoreCase(email)
                 .orElseThrow(() -> new UsernameNotFoundException("Usuário não encontrado"));
 
+        // A authority vem do papel do usuário: é o que faz hasRole('ADMIN')
+        // funcionar nos endpoints de /api/admin/**.
         return org.springframework.security.core.userdetails.User
                 .withUsername(user.getEmail())
                 .password(user.getPassword())
-                .authorities(Collections.emptyList())
+                .authorities(List.of(new SimpleGrantedAuthority(user.role().authority())))
                 .disabled(!user.isEnabled())
+                .accountLocked(user.isSuspended())
                 .build();
     }
 }
